--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MODERN WEAR STUDIO | Design & Manufacture</title>
+    <title>Vertical Colony | Demo By Bari</title>
     
     <!-- Google Fonts: Plus Jakarta Sans (Modern & Geometric) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -95,8 +95,8 @@
             <div class="flex justify-between items-center h-20">
                 <!-- Logo -->
                 <div class="flex-shrink-0 flex items-center gap-2 cursor-pointer" onclick="window.scrollTo(0,0)">
-                    <div class="w-10 h-10 bg-primary flex items-center justify-center font-bold text-black text-xl rounded-tr-xl rounded-bl-xl">M</div>
-                    <span class="font-bold text-2xl tracking-tighter text-black">MODERN<span class="text-primary">WEAR</span></span>
+                    <div class="w-10 h-10 bg-primary flex items-center justify-center font-bold text-black text-xl rounded-tr-xl rounded-bl-xl">V</div>
+                    <span class="font-bold text-2xl tracking-tighter text-black">VERTICAL<span class="text-primary">COLONY</span></span>
                 </div>
 
                 <!-- Desktop Menu -->
@@ -761,7 +761,7 @@
         <div class="max-w-7xl mx-auto px-4 text-center">
             <div class="mb-6 flex justify-center items-center gap-2">
                  <div class="w-8 h-8 bg-primary flex items-center justify-center font-bold text-black rounded-tr-lg rounded-bl-lg">M</div>
-                 <span class="font-bold text-xl">MODERN<span class="text-primary">WEAR</span></span>
+                 <span class="font-bold text-xl">VERTICAL<span class="text-primary">COLONY</span></span>
             </div>
             <div class="flex justify-center space-x-6 mb-8 text-gray-500">
                 <a href="#" class="hover:text-black transition-colors"><i class="fa-brands fa-instagram text-2xl"></i></a>
