--- a/index.html
+++ b/index.html
@@ -246,49 +246,75 @@
                 <h3 class="text-3xl md:text-4xl font-bold text-black">Material & Spesifikasi</h3>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-stretch">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12 items-stretch">
                 <!-- Left: Materials -->
                 <div data-aos="fade-right" class="flex flex-col justify-center">
-                    <h4 class="text-2xl font-bold mb-4 flex items-center">
-                        <i class="fa-solid fa-layer-group text-primary mr-3"></i> Pilihan Kain Dry-Fit
+                    <h4 class="text-2xl font-bold mb-6 flex items-center">
+                        <div class="w-10 h-10 rounded-lg bg-yellow-100 flex items-center justify-center mr-4 text-primary">
+                            <i class="fa-solid fa-layer-group text-xl"></i>
+                        </div>
+                        Pilihan Kain Dry-Fit
                     </h4>
-                    <p class="text-gray-500 mb-8 leading-relaxed">
-                        Kami menyediakan berbagai jenis bahan premium yang nyaman, menyerap keringat, dan memiliki tekstur unik.
+                    <p class="text-gray-500 mb-8 leading-relaxed text-lg">
+                        Kami menyediakan berbagai jenis bahan premium yang nyaman, menyerap keringat, dan memiliki tekstur unik sesuai standar *sportswear* modern.
                     </p>
                     <div class="bg-white p-3 rounded-[2rem] shadow-2xl border border-gray-100 transform transition-all duration-500 hover:-translate-y-2 group cursor-pointer">
                         <div class="relative overflow-hidden rounded-[1.5rem]">
                             <img src="bahan.jpg" alt="Katalog Bahan" class="w-full h-auto object-cover transform transition-transform duration-700 group-hover:scale-105">
-                            <div class="absolute top-4 right-4 bg-white/90 backdrop-blur px-3 py-1 rounded-full text-[10px] font-bold tracking-widest shadow-sm">
+                            <div class="absolute top-4 right-4 bg-white/90 backdrop-blur px-4 py-1.5 rounded-full text-[10px] font-bold tracking-widest shadow-sm">
                                 • KATALOG 2025
                             </div>
                         </div>
-                        <div class="mt-4 px-2 mb-2 flex justify-between items-center opacity-60">
-                            <span class="text-xs font-mono text-gray-500"><i class="fa-solid fa-check-circle text-primary mr-1"></i> 6 TEXTURE TYPES</span>
+                        <div class="mt-5 px-3 mb-2 flex justify-between items-center opacity-70">
+                            <span class="text-xs font-mono text-gray-500 font-bold"><i class="fa-solid fa-check-circle text-primary mr-2"></i>6 PILIHAN TEKSTUR</span>
+                            <i class="fa-solid fa-arrow-right text-sm -rotate-45 group-hover:rotate-0 transition-transform duration-300"></i>
                         </div>
                     </div>
                 </div>
 
-                <!-- Right: Specs -->
-                <div class="bg-black text-white rounded-[2rem] p-8 md:p-10 relative overflow-hidden shadow-2xl flex flex-col justify-center h-full" data-aos="fade-left">
+                <!-- Right: Specs (Redesigned) -->
+                <div class="bg-black text-white rounded-[2.5rem] p-8 md:p-12 relative overflow-hidden shadow-2xl flex flex-col justify-center h-full border border-gray-800" data-aos="fade-left">
+                    <!-- Decorative Icon Background -->
+                    <div class="absolute -top-10 -right-10 opacity-5 pointer-events-none">
+                        <i class="fa-solid fa-print text-[15rem]"></i>
+                    </div>
+
                     <div class="relative z-10">
-                        <h4 class="text-2xl font-bold mb-8 text-primary border-b border-gray-800 pb-4 inline-block">Teknologi Printing</h4>
-                        <div class="space-y-8">
-                            <div class="flex gap-5 items-start group">
-                                <div class="mt-1 w-10 h-10 rounded-full bg-gray-900 flex items-center justify-center border border-gray-800 group-hover:border-primary transition-colors flex-shrink-0">
-                                    <i class="fa-solid fa-microchip text-primary text-sm"></i>
+                        <h4 class="text-3xl font-bold mb-10 text-primary inline-block relative after:content-[''] after:absolute after:-bottom-3 after:left-0 after:w-12 after:h-1 after:bg-primary after:rounded-full">
+                            Teknologi Printing
+                        </h4>
+                        
+                        <div class="space-y-10">
+                            <!-- Item 1 -->
+                            <div class="flex gap-6 items-start group">
+                                <div class="w-14 h-14 rounded-2xl bg-gray-900 border border-gray-800 flex items-center justify-center flex-shrink-0 group-hover:border-primary/50 group-hover:bg-gray-800 transition-all duration-300 shadow-lg">
+                                    <i class="fa-solid fa-microchip text-primary text-xl group-hover:scale-110 transition-transform"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-bold text-lg text-white mb-1">Epson SureColor F6330</h5>
-                                    <p class="text-gray-400 text-sm leading-relaxed">Detail presisi dan gradasi warna halus.</p>
+                                    <h5 class="font-bold text-xl text-white mb-2 group-hover:text-primary transition-colors">Epson SureColor F6330</h5>
+                                    <p class="text-gray-400 text-sm md:text-base leading-relaxed">Mesin printer sublimasi kelas dunia. Menjamin detail presisi tinggi dan gradasi warna yang sangat halus.</p>
                                 </div>
                             </div>
-                            <div class="flex gap-5 items-start group">
-                                <div class="mt-1 w-10 h-10 rounded-full bg-gray-900 flex items-center justify-center border border-gray-800 group-hover:border-primary transition-colors flex-shrink-0">
-                                    <i class="fa-solid fa-fill-drip text-primary text-sm"></i>
+
+                            <!-- Item 2 -->
+                            <div class="flex gap-6 items-start group">
+                                <div class="w-14 h-14 rounded-2xl bg-gray-900 border border-gray-800 flex items-center justify-center flex-shrink-0 group-hover:border-primary/50 group-hover:bg-gray-800 transition-all duration-300 shadow-lg">
+                                    <i class="fa-solid fa-fill-drip text-primary text-xl group-hover:scale-110 transition-transform"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-bold text-lg text-white mb-1">Tinta Original Epson</h5>
-                                    <p class="text-gray-400 text-sm leading-relaxed">Warna tajam (Vivid), tahan cuci berkali-kali.</p>
+                                    <h5 class="font-bold text-xl text-white mb-2 group-hover:text-primary transition-colors">Tinta Original Epson</h5>
+                                    <p class="text-gray-400 text-sm md:text-base leading-relaxed">Menggunakan tinta asli bersertifikat. Warna tajam (Vivid), aman di kulit (Oeko-Tex), dan tahan cuci.</p>
+                                </div>
+                            </div>
+
+                            <!-- Item 3 -->
+                            <div class="flex gap-6 items-start group">
+                                <div class="w-14 h-14 rounded-2xl bg-gray-900 border border-gray-800 flex items-center justify-center flex-shrink-0 group-hover:border-primary/50 group-hover:bg-gray-800 transition-all duration-300 shadow-lg">
+                                    <i class="fa-solid fa-shirt text-primary text-xl group-hover:scale-110 transition-transform"></i>
+                                </div>
+                                <div>
+                                    <h5 class="font-bold text-xl text-white mb-2 group-hover:text-primary transition-colors">Full Custom Area</h5>
+                                    <p class="text-gray-400 text-sm md:text-base leading-relaxed">Area cetak tidak terbatas. Bebas kreasikan desain pada seluruh permukaan kain (Depan, Belakang, Lengan).</p>
                                 </div>
                             </div>
                         </div>
